--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -209,7 +209,8 @@
             <!-- Grid column 4-->
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
               <div class="contact">
-                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                <h6 class="text-uppercase fw-bold mb-4">C
+                  ontact</h6>
               <p><i class="fas fa-home me-3 text-secondary"></i>Jl. TMB Raya ITS, Surabaya </p>
               <p>
                 <i class="fas fa-envelope me-3 text-secondary"></i>
