--- a/src/Payment/pay100.html
+++ b/src/Payment/pay100.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" type="R-icon" href="/asset/img/icon/RUANG.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment-R</title>
-    <link rel="stylesheet" href="/asset/css/stylepayment.css" />
+    <link rel="stylesheet" href="/asset/css/style.payment.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
