--- a/src/Payment/pay500.html
+++ b/src/Payment/pay500.html
@@ -14,7 +14,7 @@
   <body>
     <!-- NAVBAR AWAL -->
     <nav class="navbar">
-      <a class="navbar-brand" href="javascript:void(0);" onclick="goBack()"> RUANG MAKMUR</a>
+      <a class="navbar-brand" href="javascript:void(0);" onclick="goBack()"> RUANG BERKAH</a>
     </nav>
     <!-- NAVBAR AKHIR -->
     <main>
