--- a/src/contactus/index.html
+++ b/src/contactus/index.html
@@ -115,5 +115,86 @@
     </section>
 
     <!-- AKHIR TEMPLATE FORM -->
+  </section>
+  <footer class="text-center text-lg-start text-muted">
+    
+      <div>
+        <a href="" class="me-4 link-secondary">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="me-4 link-secondary">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="" class="me-4 link-secondary">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="" class="me-4 link-secondary">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="me-4 link-secondary">
+          <i class="fab fa-linkedin"></i>
+        </a>  
+        <a href="" class="me-4 link-secondary">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+    </section>
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <div class="row mt-3">
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3 text-secondary"></i>Yayasan Makmur Ruang</h6>
+            <p>Didirikan untuk membangun dan mempersatukan Umat dalam berlomba-lomba menuju kebaikan serta memudahkan uluran untuk sesama</p>
+          </div>
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">Products</h6>
+            <p>
+              <a href="/src/Home/index.html" class="text-reset">Ruang Donasi</a>
+            </p>
+            <p>
+              <a href="/src/Home/index.html" class="text-reset">Ruang Ngaji</a>
+            </p>
+            <p>
+              <a href="/src/merchantdise.html" class="text-reset">Merchandise</a>
+            </p>
+          </div>
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">Company</h6>
+            <p>
+              <a href="/src/Aboutus/index.html" class="text-reset">About Us</a>
+            </p>
+            <p>
+              <a href="/src/contactus/index.html" class="text-reset">Contact Us</a>
+            </p>
+            <p>
+              <a href="https://wa.me/6281230200209" target="  blank" class="text-reset">Help</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <div class="contact">
+              <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+            <p><i class="fas fa-home me-3 text-secondary"></i>Jl. TMB Raya ITS, Surabaya </p>
+            <p>
+              <i class="fas fa-envelope me-3 text-secondary"></i>
+              info@ruangmakmur.com
+            </p>
+            <p><i class="fas fa-phone me-3 text-secondary"></i> +62 817 873 903</p>
+            <p><i class="fas fa-print me-3 text-secondary"></i> +62 811 3344 889</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025)">
+      © 2023 Copyright:
+      <a class="text-reset fw-bold" href="index.html">Makmur Ruang (kelompok 6)</a>
+    </div>
+  </footer>
+  
+  <!-- AKHIR FOOTER -->
+
+
+
   </body>
 </html>
